automatically launch the game in loop

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <div class="buttons">
-            <button onclick="launchGame()" class="btn btn-primary">Lancer le jeu</button>
+            <!-- <button onclick="launchGame()" class="btn btn-primary">Lancer le jeu</button> -->
         </div>
 
         <div class="table-bordered">
